--- a/Read/Reader Window/JBRReaderWindow.storyboard
+++ b/Read/Reader Window/JBRReaderWindow.storyboard
@@ -9,7 +9,7 @@
         <scene sceneID="cyf-kN-tqi">
             <objects>
                 <windowController storyboardIdentifier="JBRReaderWindowController" id="MxZ-6L-QWw" customClass="JBRReaderWindowController" sceneMemberID="viewController">
-                    <window key="window" title="Window" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" frameAutosaveName="" animationBehavior="default" tabbingMode="disallowed" titleVisibility="hidden" id="C7b-wt-mrQ">
+                    <window key="window" title="Window" separatorStyle="line" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" frameAutosaveName="" animationBehavior="default" tabbingMode="disallowed" titleVisibility="hidden" id="C7b-wt-mrQ">
                         <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES" fullSizeContentView="YES"/>
                         <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
                         <rect key="contentRect" x="216" y="264" width="800" height="500"/>
