--- a/Read/Reader Window/JBRReaderWindow.storyboard
+++ b/Read/Reader Window/JBRReaderWindow.storyboard
@@ -11,12 +11,12 @@
                 <windowController storyboardIdentifier="JBRReaderWindowController" id="MxZ-6L-QWw" customClass="JBRReaderWindowController" sceneMemberID="viewController">
                     <window key="window" title="Window" separatorStyle="line" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" frameAutosaveName="" animationBehavior="default" tabbingMode="disallowed" titleVisibility="hidden" id="C7b-wt-mrQ">
                         <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES" fullSizeContentView="YES"/>
-                        <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-                        <rect key="contentRect" x="216" y="264" width="800" height="500"/>
+                        <windowPositionMask key="initialPositionMask" topStrut="YES"/>
+                        <rect key="contentRect" x="216" y="264" width="900" height="2000"/>
                         <rect key="screenRect" x="0.0" y="0.0" width="1536" height="935"/>
                         <value key="minSize" type="size" width="800" height="500"/>
                         <view key="contentView" id="jA8-In-T8v">
-                            <rect key="frame" x="0.0" y="0.0" width="800" height="500"/>
+                            <rect key="frame" x="0.0" y="0.0" width="900" height="2000"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </view>
                         <connections>
